[package]
name = "genicons"
version = "0.1.1"
edition = "2024"
description = "A quick utility to generate favicons"
authors = ["OwOchlé"]
license = "MIT"
homepage = "https://github.com/OwOchle/genicons"
repository = "https://github.com/OwOchle/genicons"
readme = "README.md"

[dependencies]
arboard = { version = "3.6.0", default-features = false }
clap = { version = "4.5.43", features = ["derive"] }
crossterm = "0.29.0"
ico = "0.4.0"
photon-rs = "0.3.3"
rayon = "1.10.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"